<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Signup">
   <EditText
            android:id="@+id/email_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintWidth_percent=".8"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/colorWhite"
            android:inputType="textEmailAddress"
       android:importantForAutofill="no" />

   <EditText
          android:id="@+id/password1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:textColor="@color/colorWhite"
          android:padding="10dp"
          android:paddingRight="12dp"
          android:paddingLeft="12dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/email_id"
          app:layout_constraintVertical_bias=".1"
          app:layout_constraintHorizontal_bias=".5"
          app:layout_constraintWidth_percent=".8"
          android:background="@drawable/edittext_background"
          android:textColorHint="@color/colorWhite"
          android:importantForAutofill="no" />
   <EditText
          android:id="@+id/password2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:hint="@string/confirm_password"
          android:inputType="textPassword"
          android:padding="10dp"
          android:paddingRight="12dp"
          android:paddingLeft="12dp"
          android:textColor="@color/colorWhite"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/password1"
          app:layout_constraintVertical_bias=".1"
          app:layout_constraintHorizontal_bias=".5"
          app:layout_constraintWidth_percent=".8"
          android:background="@drawable/edittext_background"
          android:textColorHint="@color/colorWhite"
         android:importantForAutofill="no" />

   <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias=".1"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintWidth_percent=".4"
            android:background="@drawable/button_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>